fix alignment of "sign in" window (bug 843283)

--- a/media/css/mkt/login.less
+++ b/media/css/mkt/login.less
@@ -5,15 +5,13 @@ body.login[data-page-type=notice] #site-header h1 {
     left: 70px;
 }
 
-@media (max-width: @4col) {
-    .login section {
+.centre {
+    text-align: center;
+    h2, footer {
         text-align: center;
-        footer {
-            text-align: center;
-        }
-        .proceed {
-            margin-top: 20px;
-        }
+    }
+    .proceed {
+        margin-top: 20px;
     }
 }
 
